--- a/Front/index.html
+++ b/Front/index.html
@@ -3,21 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interface ERP - Front-end</title>
+    <title>Interface ERP - Sistema Completo</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <header>
-    <h1>Sistema ERP - Módulo de Controle de Estoque</h1>
+    <h1>Sistema ERP - Módulo de Controle</h1>
+    <nav>
+        <button class="nav-btn" data-tab="estoque">Controle de Estoque</button>
+        <button class="nav-btn" data-tab="ponto">Marcar Ponto</button>
+        <button class="nav-btn" data-tab="visualizar">Visualizar Estoque</button>
+    </nav>
 </header>
+
 <main>
-    <section class="module">
+    <!-- Controle de Estoque -->
+    <section class="tab-content" id="estoque">
         <h2>Controle de Estoque</h2>
-        <p>Gerencie seus produtos, quantidades e níveis de reposição de maneira eficiente.</p>
-        <button class="btn" id="addProductBtn">Adicionar Produto</button>
+        <p>Gerencie seus produtos, quantidades e níveis de reposição.</p>
+        <form id="addProductForm">
+            <input type="text" id="productName" placeholder="Nome do Produto" required>
+            <input type="number" id="productQuantity" placeholder="Quantidade" required>
+            <button class="btn" type="submit">Adicionar Produto</button>
+        </form>
         <button class="btn" id="viewStockBtn">Visualizar Estoque</button>
+        <div id="productList"></div>
+    </section>
+
+    <!-- Marcar Ponto -->
+    <section class="tab-content" id="ponto" style="display: none;">
+        <h2>Marcar Ponto</h2>
+        <p>Marque seu ponto de entrada e saída.</p>
+        <button class="btn" id="checkInBtn">Marcar Entrada</button>
+        <button class="btn" id="checkOutBtn">Marcar Saída</button>
+        <div id="pontoStatus"></div>
+    </section>
+
+    <!-- Visualizar Estoque -->
+    <section class="tab-content" id="visualizar" style="display: none;">
+        <h2>Visualizar Estoque</h2>
+        <p>Consulte a lista completa de produtos em estoque.</p>
+        <button class="btn" id="refreshStockBtn">Atualizar Estoque</button>
+        <div id="stockView"></div>
     </section>
 </main>
+
 <script src="script.js"></script>
 </body>
 </html>
