--- a/Front/ponto.html
+++ b/Front/ponto.html
@@ -1,24 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Controle de Ponto</title>
+  <title>Ponto - Projeto Web</title>
   <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-<div class="content">
-  <button id="backToHome" class="back-btn">Voltar</button>
-  <h2>Controle de Ponto</h2>
-  <button onclick="updatePonto(1, 'Presente')">Atualizar Ponto Funcionário 1 para Presente</button>
-  <div id="employee-1">
-    <span class="ponto-status">Status: Ausente</span>
-  </div>
+<!-- Tela de Ponto -->
+<div class="ponto-container">
+  <h1>Ponto</h1>
+  <p>Controle de ponto de funcionários.</p>
+  <button onclick="location.href='home.html'">Voltar</button>
 </div>
 
-<script src="script.js"></script>
+<script src="scripts.js"></script>
 </body>
-
 </html>
