--- a/Front/home.html
+++ b/Front/home.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Estoque - Projeto Web</title>
+  <title>Home - Omnira</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<!-- Tela de Estoque -->
-<div class="estoque-container">
-  <h1>Estoque</h1>
-  <p>Conteúdo relacionado ao estoque.</p>
-  <button onclick="location.href='home.html'">Voltar</button>
+<!-- Tela Principal -->
+<div class="home-container">
+  <h1>Módulos</h1>
+  <button onclick="location.href='estoque.html'">Estoque</button>
+  <button onclick="location.href='ponto.html'">Ponto</button>
 </div>
 
 <script src="scripts.js"></script>
