atualização das telas

--- a/Front/estoque.html
+++ b/Front/estoque.html
@@ -10,7 +10,11 @@
 <!-- Tela de Estoque -->
 <div class="estoque-container">
   <h1>Estoque</h1>
-  <p>Conteúdo relacionado ao estoque.</p>
+  <button onclick="cadastrarProduto()">Cadastrar Produto</button>
+  <button onclick="atualizarProduto()">Atualizar Produto</button>
+  <button onclick="removerProduto()">Remover Produto</button>
+  <button onclick="consultarProduto()">Consultar Produto</button>
+  <button onclick="gerarRelatorioEstoque()">Gerar Relatório de Estoque</button>
   <button onclick="location.href='home.html'">Voltar</button>
 </div>
 
