--- a/Front/home.html
+++ b/Front/home.html
@@ -9,11 +9,11 @@
 <body>
 <!-- Tela Principal -->
 <div class="home-container">
-  <h1>Módulos</h1>
+  <h1>Página Inicial</h1>
+  <p>Bem-vindo ao sistema de gerenciamento OMNIRA. Escolha uma opção abaixo:</p>
   <button onclick="location.href='estoque.html'">Estoque</button>
   <button onclick="location.href='ponto.html'">Ponto</button>
 </div>
-
 <script src="scripts.js"></script>
 </body>
 </html>
