--- a/Front/ponto.html
+++ b/Front/ponto.html
@@ -10,7 +10,10 @@
 <!-- Tela de Ponto -->
 <div class="ponto-container">
   <h1>Ponto</h1>
-  <p>Controle de ponto de funcionários.</p>
+  <button onclick="registrarEntrada()">Registrar Entrada</button>
+  <button onclick="registrarSaida()">Registrar Saída</button>
+  <button onclick="consultarHistoricoPonto()">Consultar Histórico de Ponto</button>
+  <button onclick="gerarRelatorioPonto()">Gerar Relatório de Ponto</button>
   <button onclick="location.href='home.html'">Voltar</button>
 </div>
 
