--- a/Front/index.html
+++ b/Front/index.html
@@ -7,19 +7,29 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<!-- Tela de Login -->
-<div class="login-container">
-    <h1>Bem-vindo!</h1>
-    <form id="loginForm" action="home.html" method="GET">
-        <label for="username">Usuário</label>
-        <input type="text" id="username" name="username" placeholder="Digite seu usuário" required>
 
-        <label for="password">Senha</label>
-        <input type="password" id="password" name="password" placeholder="Digite sua senha" required>
+    <header>
 
-        <button type="submit">Entrar</button>
-    </form>
-</div>
+        <div class="logo">
+
+            <img src="imgs/Omnira-logo.svg" alt="Logo">
+
+        </div>
+
+    </header>
+    <main>
+        <div class="login-container">
+            <h1>Bem-vindo!</h1>
+            <form id="loginForm" action="home.html" method="GET">
+                <label for="username">Usuário</label>
+                <input type="text" id="username" name="username" placeholder="Digite seu usuário" required>
+    
+                <label for="password">Senha</label>
+                <input type="password" id="password" name="password" placeholder="Digite sua senha" required>
+                <button type="submit">Entrar</button>
+            </form>
+        </div>
+    </main>
 
 <script src="scripts.js"></script>
 </body>
