--- a/Front/home.html
+++ b/Front/home.html
@@ -10,9 +10,10 @@
 <!-- Tela Principal -->
 <div class="home-container">
   <h1>Página Inicial</h1>
-  <p>Bem-vindo ao sistema de gerenciamento OMNIRA. Escolha uma opção abaixo:</p>
+  <p>Bem-vindo ao sistema de gerenciamento OMNIRA.</p>
   <button onclick="location.href='estoque.html'">Estoque</button>
   <button onclick="location.href='ponto.html'">Ponto</button>
+  <button onclick="location.href='index.html'">Logout</button>
 </div>
 <script src="scripts.js"></script>
 </body>
