--- a/Front/index.html
+++ b/Front/index.html
@@ -12,7 +12,7 @@
 
         <div class="logo">
 
-            <img src="imgs/Omnira-logo.svg" alt="Logo">
+            <img src="imgs/Omnira-logo.svg" alt="Logo" style="height: fit-content;">
 
         </div>
 
@@ -23,7 +23,6 @@
             <form id="loginForm" action="home.html" method="GET">
                 <label for="username">Usuário</label>
                 <input type="text" id="username" name="username" placeholder="Digite seu usuário" required>
-    
                 <label for="password">Senha</label>
                 <input type="password" id="password" name="password" placeholder="Digite sua senha" required>
                 <button type="submit">Entrar</button>
