--- a/Front/ponto.html
+++ b/Front/ponto.html
@@ -1,22 +1,40 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ponto - Projeto Web</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ponto</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<!-- Tela de Ponto -->
-<div class="ponto-container">
-  <h1>Ponto</h1>
-  <button onclick="registrarEntrada()">Registrar Entrada</button>
-  <button onclick="registrarSaida()">Registrar Saída</button>
-  <button onclick="consultarHistoricoPonto()">Consultar Histórico de Ponto</button>
-  <button onclick="gerarRelatorioPonto()">Gerar Relatório de Ponto</button>
-  <button onclick="location.href='home.html'">Voltar</button>
-</div>
 
-<script src="scripts.js"></script>
+    <div class="content">
+        <h1>Controle de Ponto</h1>
+        <form action="#" method="post">
+            <div class="input-group">
+                <label for="hora">Hora de Entrada</label>
+                <input type="time" id="hora" name="hora">
+            </div>
+            <div class="input-group">
+                <label for="hora-saida">Hora de Saída</label>
+                <input type="time" id="hora-saida" name="hora-saida">
+            </div>
+            <button type="submit">Registrar Ponto</button>
+        </form>
+        <h2>Relatório de Ponto</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Funcionário</th>
+                    <th>Entrada</th>
+                    <th>Saída</th>
+                    <th>Total de Horas</th>
+                </tr>
+            </thead>
+        </table>
+    </div>
+    <div class="sidebar">
+        <button onclick="location.href='home.html'">Voltar</button>
+    </div>
 </body>
 </html>
